@@ -218,6 +218,7 @@ enum EMUCMD
 	//-----------------------------
 	EMUCMD_MISC_DISPLAY_MOVIESUBTITLES,
 	EMUCMD_MISC_UNDOREDOSAVESTATE,
+	EMUCMD_MISC_TOGGLEFULLSCREEN,
 	EMUCMD_MAX
 };
 
